--- a/TelecommunicationsBigData-FrontEnd/package.json
+++ b/TelecommunicationsBigData-FrontEnd/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "echarts": "^5.6.0",
     "element-plus": "^2.9.3",
     "vue": "^3.5.13",
     "vue-echarts": "^7.0.3",
