添加文档注解

--- a/TelecommunicationsBigData-BackEnd/pom.xml
+++ b/TelecommunicationsBigData-BackEnd/pom.xml
@@ -81,6 +81,11 @@
             <artifactId>springfox-boot-starter</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
     <dependencyManagement>
@@ -115,14 +120,6 @@
                     <mainClass>com.bigdata.TelecommunicationsBigDataBackEndApplication</mainClass>
                     <skip>true</skip>
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>repackage</id>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
